# PNGtoJPEG

./: .gitignore  CMakeLists.txt  ColourConverter.cpp  ColourConverter.h  ImageUtility.cpp  ImageUtility.h  JPEGWriter.cpp  JPEGWriter.h  PNGReader.cpp  PNGReader.h  README.md  main.cpp
